--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://mohamed ahmed.com/">
     <meta property="og:title" content="Kervin Tan — Product Designer">
     <meta property="og:description" content="A product designer currently based in the Philippines and passionate about creating platforms that add value to people’s lives.">
-    <meta property="og:image" content="https://krvin.com/img/krvin-seo.jpg">
+    <meta property="og:image" content="https://krvin.com/imgvin-seo.jpg">
 
     <title>mohamed ahmed — Product Designer</title>
 
